feat(views): add translations for views and links